# tiny-little-vm

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  conanfile.txt
src/: compiler.cpp  compiler.h  data.h  proc.cpp  proc.h  tlvm.cpp  type.h
